--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -130,16 +130,6 @@ a.ecomproduct__button,
 // #Dropbox
 // -----------------------------
 
-.dropbox {
-	display: table;
-}
-
-.dropbox__button,
-.dropbox__label {
-	display: table-cell;
-	vertical-align: middle;
-}
-
 .dropbox__label {
 	width: 100%;
 	padding-left: 1em;
